--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -40,6 +42,9 @@
     ]
   },
   "devDependencies": {
-    "redux-devtools-extension": "^2.13.8"
+    "@craco/craco": "^6.0.0",
+    "@semantic-ui-react/craco-less": "^1.2.1",
+    "redux-devtools-extension": "^2.13.8",
+    "semantic-ui-less": "^2.4.1"
   }
 }
